src/index.scss
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1.1rem !important;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
  font-size: 1rem !important;
}

.main-container {
  position: relative;
  background-color: #0d1116;

}

a {
  text-decoration: none;
}

a:hover {
  color: #5000ca;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
}

p, a, h1, h2, h3, h4, h5, label, button {
  color: white;
  font-family: "Lato", sans-serif;
}

.navigation-bar {
  justify-content: space-between;
  background-color: #0d1116;

  button {
    font-size: 1.1rem;
    font-family: "Lato", sans-serif;
    text-transform: initial;
    padding: 6px 10px;
  }

  svg {
    cursor: pointer;
  }
}

.navigation-bar-responsive {
  span, p {
    color: #0d1116;
    font-family: "Lato", sans-serif;
  }
}

.container {
  margin-top: 64px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.header-image {
  width: 100%;
  height: 450px;

  img {
    width: 100%;
    height: 450px;
    object-fit: cover;
  }
}

.mobile-menu-top {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
  font-weight: bold;
}

.items-container {
  padding: 2% 10%;
  text-align: left;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.light-mode {
  background-color: #f8f9fa;

  .navigation-bar {
    background-color: #f8f9fa;
  }

  p, a, h1, h2, h3, h4, h5, label, button {
    color: #0d1116;
  }

  a:hover {
    color: #5000ca;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
  }

  .navigation-bar svg {
    color: #0d1116;
  }

  .about-section {
    background-image: url("./assets/images/bg-light.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
  }

  .skills-container svg {
    color: #0d1116;
  }

  .chip {
    background-color: rgba(0, 0, 0, 0.08);
    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
  }

  .vertical-timeline::before {
    background-color: rgba(0, 0, 0, 0.08);
  }

  .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
  }

  .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
    color: gray;
  }

  .vertical-timeline-element-content-arrow {
    border-right: 7px solid rgba(0, 0, 0, 0.08) !important;
  }

  .flex-chips .chip-title {
    color: #0d1116;
  }

  .MuiInputBase-root {
    color: #0d1116 !important;
    background-color: white !important;
  }

  .MuiInputBase-input {
    color: #0d1116 !important;
    background-color: transparent !important;
  }

  .MuiFormLabel-root {
    color: #0d1116 !important;
  }
  
  .MuiFormHelperText-root {
    color: #0d1116 !important;
  }
}

.dark-mode {
  background-color: #0d1116;

  .navigation-bar {
    background-color: #0d1116;
  }

  p, a, h1, h2, h3, h4, h5, label, button {
    color: #f8f9fa;
  }

  a:hover {
    color: #345eeb;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
  }

  .navigation-bar svg {
    color: #f8f9fa;
  }

  .about-section {
    background-image: url("./assets/images/bg-dark.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
  }

  .skills-container svg {
    color: #f8f9fa;
  }

  .chip {
    background-color: rgba(255, 255, 255, 0.08);
    box-shadow: 0px 3px 1px -2px rgba(255, 255, 255, 0.2), 0px 2px 2px 0px rgba(255, 255, 255, 0.14), 0px 1px 5px 0px rgba(255, 255, 255, 0.12);
  }

  .vertical-timeline::before {
    background-color: rgba(255, 255, 255, 0.08);
  }

  .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
    box-shadow: 0px 3px 1px -2px rgba(255, 255, 255, 0.2), 0px 2px 2px 0px rgba(255, 255, 255, 0.14), 0px 1px 5px 0px rgba(255, 255, 255, 0.12);
  }

  .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
    color: lightgray;
  }

  .vertical-timeline-element-content-arrow {
    border-right: 7px solid rgba(255, 255, 255, 0.08) !important;
  }

  .flex-chips .chip-title {
    color: #f8f9fa;
  }

  .MuiInputBase-root {
    color: #f8f9fa !important;
    background-color: #1e2227 !important;
  }

  .MuiInputBase-input {
    color: #f8f9fa !important;
    background-color: transparent !important;
  }

  .MuiFormLabel-root {
    color: #f8f9fa !important;
  }
  
  .MuiFormHelperText-root {
    color: #f8f9fa !important;
  }
}

@media screen {
  @media (max-width: 768px) {
    .items-container {
      padding: 5% 5%;
    }
    
    .light-mode .about-section,
    .dark-mode .about-section {
      background-attachment: scroll;
    }
  }
}

